# ComfyUI-IcyHider

./: README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
ComfyUI-IcyHider/: nodes.py
ComfyUI-IcyHider/js/: icy_hider.js
js/: icy_hider.js
